--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+ 
     
 <button class="tablink" onclick="openPage('Home', this, 'black')" id="defaultOpen">Home</button>
 <button class="tablink" onclick="openPage('About', this, 'green')">About</button>
@@ -27,7 +28,8 @@
     <span class="text1">Welcome To My CV</span>
     <br>
     <br>
-    <span class="text2">Girtie Lehoko</span>
+    <br>
+    <span class="text2">Girtie Lehoko</span>   
   
 </div>
 
@@ -49,6 +51,15 @@
       <a href="file/Girtie Lehoko.pdf" download>Download pdf CV</a>   
   </div> 
 
+  <!-- <footer class= "mainFooter">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <h3 style ="width: 100%;">Social Media Links</h3>         
+       <a href="https://za.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+       <a href="https://www.facebook.com/profile.php?id=100006458635342" target="_blank"><i class="fa fa-facebook-official"></i></a>
+       <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
+
+  <p>copyright &copy;<script> document.write(new Date().getFullYear());</script> Developed by  Girtie Lehoko</p>
+</footer> -->
 </div>
 
 <div id="Education" class="tabcontent">
@@ -145,7 +156,9 @@
 </div>
 
 <div id="Experience" class="tabcontent">
-  <h2>Work Experience</h2> <br>
+  <h2>Work Experience</h2>
+  <br>
+  <br>
 
     <div class= "box3">
     
@@ -200,18 +213,16 @@
   document.getElementById("defaultOpen").click();
   </script>
 
+<footer class= "mainFooter">      
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <h3 style ="width: 100%;">Social Media Links</h3>         
+   <a href="https://za.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+   <a href="https://www.facebook.com/profile.php?id=100006458635342" target="_blank"><i class="fa fa-facebook-official"></i></a>
+   <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
 
+<p>copyright &copy;<script> document.write(new Date().getFullYear());</script> Developed by  Girtie Lehoko</p>
+</footer>
 
-<footer class= "mainFooter">
-          <!-- Including social media links -->
-  	        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            <h3 style ="width: 100%;">Social Media Links</h3>         
-             <a href="https://za.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-             <a href="https://www.facebook.com/profile.php?id=100006458635342" target="_blank"><i class="fa fa-facebook-official"></i></a>
-             <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
-  
-        <p>copyright &copy;<script> document.write(new Date().getFullYear());</script> Developed by  Girtie Lehoko</p>
-   </footer>
   
 </body>
 </html>
