--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 
 <div id="About" class="tabcontent">
-  <img src="/image.jpg"  alt="my Photo" class="image">
+  <img src="/files/image.jpg"  alt="my Photo" class="image">
   
   <div class= "box1">
   <h2>Personal Profile</h2>
@@ -48,7 +48,7 @@
       <tab2>Sebokeng</tab2> <br> 
       <tab3>1983</tab3> <br> 
       
-      <a href="file/Girtie Lehoko.pdf" download>Download pdf CV</a>   
+      <a href="files/Girtie Lehoko.pdf" download>Download pdf CV</a>   
   </div> 
 
   <!-- <footer class= "mainFooter">
