modified edu file, index file and css file

--- a/index.html
+++ b/index.html
@@ -51,16 +51,7 @@
       <a href="files/Girtie Lehoko.pdf" download>Download pdf CV</a>   
   </div> 
 
-  <!-- <footer class= "mainFooter">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <h3 style ="width: 100%;">Social Media Links</h3>         
-       <a href="https://za.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-       <a href="https://www.facebook.com/profile.php?id=100006458635342" target="_blank"><i class="fa fa-facebook-official"></i></a>
-       <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
-
-  <p>copyright &copy;<script> document.write(new Date().getFullYear());</script> Developed by  Girtie Lehoko</p>
-</footer> -->
-</div>
+  </div>
 
 <div id="Education" class="tabcontent">
   <h2>Education</h2>
@@ -151,10 +142,6 @@
     </ul>
 
   </div>
-  
-
-
-
 </div>
 
 <div id="Experience" class="tabcontent">
@@ -172,20 +159,22 @@
           <strong>Contact person:  </strong> <tab6>Mr. Mpho kekana</tab6><br>
           <strong>Occupation : </strong> <tab7>Owner & Founder</tab7> <br>
           <strong>Contact Number : </strong> <tab8>063 879 3934</tab8> <br>
-           <br>
-           <br>
-
-           <strong>Employer:</strong> <tab1> North- West University Vaal Triangle Campus</tab1> <br>
-           <strong>Job Title :</strong> <tab2>Student Assistant (Modules: Understanding the natural world, Science, Technology and Society, Mathematical Techniques)</tab2>  <br>
-           <strong>Duties:</strong> <tab3>Assisting lecturers with marking test scripts, Invigilating during class tests & Evaluating presentations </tab3>  <br>                      
-           <strong>Duration  :</strong> <tab4>February 2018- June 2019 </tab4> <br>
-           <strong>Reason for Leaving :</strong> <tab5>End of Contract </tab5> <br>
-           <strong>Contact person:  </strong> <tab6>Mrs Elna van der Merwe</tab6><br>
-           <strong>Occupation : </strong> <tab7>Lecturer (Faculty of Mathematical and stats)</tab7> <br>
-           <strong>Contact Number : </strong> <tab8>082 332 8551</tab8> <br>
-
           </p>
     </div> 
+
+    <div class="box4">
+      <p>      
+        <strong>Employer:</strong> <tab1> North- West University Vaal Triangle Campus</tab1> <br>
+        <strong>Job Title :</strong> <tab2>Student Assistant (Modules: Understanding the natural world, Science, Technology and Society, Mathematical Techniques)</tab2>  <br>
+        <strong>Duties:</strong> <tab3>Assisting lecturers with marking test scripts, Invigilating during class tests & Evaluating presentations </tab3>  <br>                      
+        <strong>Duration  :</strong> <tab4>February 2018- June 2019 </tab4> <br>
+        <strong>Reason for Leaving :</strong> <tab5>End of Contract </tab5> <br>
+        <strong>Contact person:  </strong> <tab6>Mrs Elna van der Merwe</tab6><br>
+        <strong>Occupation : </strong> <tab7>Lecturer (Faculty of Mathematical and stats)</tab7> <br>
+        <strong>Contact Number : </strong> <tab8>082 332 8551</tab8> <br>
+
+      </p>
+    </div>
 </div>
 
 
