fixing the image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 
 <div id="About" class="tabcontent">
-  <img src="/files/image.JPG"  alt="my Photo" class="image">
+  <img src="files/image.png"  alt="my Photo" class="image">
   
   <div class= "box1">
   <h2>Personal Profile</h2>
