deleted unwanted file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   href="shetland.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="edu.css">
+    <link rel="stylesheet" href="astyle.js">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
