--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 <footer class= "mainFooter">      
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <h3 style ="width: 100%;">Social Media Links</h3>         
-   <a href="https://za.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+   <a href="https://www.linkedin.com/in/girtie-lehoko-1a840217a/" target="_blank"><i class="fa fa-linkedin"></i></a>
    <a href="https://www.facebook.com/profile.php?id=100006458635342" target="_blank"><i class="fa fa-facebook-official"></i></a>
-   <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
+   <a href="https://github.com/LehokoGirtie" target="_blank"><i class="fa fa-github"></i></a>
 
 <p>copyright &copy;<script> document.write(new Date().getFullYear());</script> Developed by  Girtie Lehoko</p>
 </footer>
